fixed the "gap" at the bottom.

--- a/magical-kitties/src/app/layout/footer/footer.component.scss
+++ b/magical-kitties/src/app/layout/footer/footer.component.scss
@@ -14,7 +14,3 @@ mat-toolbar-row {
     display: flex;
     align-items: center;
 }
-
-.spacer {
-    flex: 1 1 auto;
-}
