--- a/magical-kitties/src/styles.scss
+++ b/magical-kitties/src/styles.scss
@@ -12,6 +12,7 @@ html {
             density: 0,
         )
     );
+    position: relative;
 }
 
 html,
@@ -21,6 +22,7 @@ body {
 body {
     margin: 0;
     font-family: Carrois Gothic, "Carrois Gothic", sans-serif;
+    background-color: var(--mat-sys-secondary);
 }
 
 .content {
